# template-generator

./: CMakeLists.txt  README.md  build
src/: args-parser.cpp  args-parser.h  args_parser.cpp  basic_generator.cpp  basic_generator.h  cpp_generator.cpp  cpp_generator.h  cs_generator.h  file_manager.cpp  file_manager.h  main.cpp  md_generator.cpp  md_generator.h  param.cpp  param.h
template/: t.c  t.cf.cpp  t.cpp  t.fio.cpp  t.fiocf.cpp  t.h  t.imp.cpp  t.md  t.py
